<resources>
    <string name="app_name">e-CommerceABB</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="welcome_screen_title_1">Welcome to</string>
    <string name="welcome_screen_title_2">Dot store!</string>
    <string name="welcome_screen_subtitle">The best e-commerce app for your daily needs</string>
    <string name="welcome_button">Continue</string>
    <string name="next">Next</string>
    <string name="next_last_step">Get Started</string>
    <string name="onboarding_step1">High quality products just for you!</string>
    <string name="onboarding_step2">Choose any suitable deliver method!</string>
    <string name="onboarding_step3">You can pay at your convenience!</string>
    <string name="register_title">Lets you in</string>
    <string name="register_description">You can sign in with</string>
    <string name="register_facebook">Facebook</string>
    <string name="register_google">Google</string>
    <string name="register_apple">Apple</string>
    <string name="register_button">Sign in with password</string>
    <string name="sign_up_suggest_text">Don’t have account? Sign up</string>
    <string name="sign_in_suggest_text">Already have an account? Sign in</string>
    <string name="sign_up">Sign up</string>
    <string name="change">Change</string>
    <string name="sign_up_screen_title">Create your account</string>
    <string name="sign_up_firstname">First name</string>
    <string name="sign_up_lastname">Last name</string>
    <string name="sign_up_username">Username</string>
    <string name="sign_up_remember_me">Remember me</string>
    <string name="sign_up_continue_with">or continue with</string>
    <string name="sign_up_already_have_account">Already have an account? Sign in</string>
    <string name="sign_in">Sign in</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="or">or</string>
    <string name="recover_password_title">Get help signin in</string>
    <string name="recover_password_nav_title">Recovery</string>
    <string name="recover_password_hint">Username or email</string>
    <string name="recover_password_description">Enter the email address or username associated with your account </string>
    <string name="new_password_title">Create a new password</string>
    <string name="new_password_hint">Enter new password</string>
    <string name="new_password_hint_again">Duplicate new password</string>
    <string name="new_pass_success">Congratulations!</string>
    <string name="new_pass_success_description">Your password recovered. Account is ready to use. You will be redirected to the Home page in a few seconds… </string>
    <string name="resend_code">Resend code in 58 s</string>
    <string name="code_has_been_sent_to">Recovery code has been sent to eco*******ail.com</string>
    <string name="register_code_has_been_sent_to">Authorization code has been sent to eco*******ail.com</string>
    <string name="enter_recovery_code">Enter recovery code</string>
    <string name="pin_screen_register_title">Great!</string>
    <string name="verify">Verify</string>
    <string name="login_screen_title">Sign in to account</string>
    <string name="forgot_pass_screen_text">Forgot the password?</string>
    <string name="fill_your_profile">Fill your profile</string>
    <string name="full_name">Full name</string>
    <string name="date_of_birth">Date of birth</string>
    <string name="phone_number">Phone number</string>
    <string name="gender">Gender</string>
    <string name="skip">Skip</string>
    <string name="edit_profile">Edit profile</string>
    <string name="home">Home</string>
    <string name="orders">Orders</string>
    <string name="cart">Cart</string>
    <string name="profile">Profile</string>
    <string name="search_hint">Search for anything</string>
    <string name="wish_list">My wish list</string>
    <string name="ongoing">Ongoing</string>
    <string name="ongoing_empty_text">You don’t have an ongoing orders at this time</string>
    <string name="completed">Completed</string>
    <string name="completed_empty_text">You don’t have completed orders yet</string>
    <string name="cancelled">Cancelled</string>
    <string name="cancelled_empty_text">There are no cancelled orders</string>
    <string name="wish_list_title">Wish list</string>
    <string name="review_hint">Type review</string>
    <string name="how_is_your_order">How is your order?</string>
    <string name="track_order">Track order</string>
    <string name="in_delivery">In delivery</string>
    <string name="leave_review">Leave review</string>
    <string name="buy_again">Buy again</string>
    <string name="checkout">Checkout</string>
    <string name="total_price">Total price</string>
    <string name="add_new_product">Add new product</string>
    <string name="my_products">My products</string>
    <string name="name">Name</string>
    <string name="description">Description</string>
    <string name="price">Price</string>
    <string name="brand">Brand</string>
    <string name="category">Category</string>
    <string name="deactivate">Deactivate</string>
    <string name="statistics">Statistics</string>
    <string name="buy_now">Buy now</string>
    <string name="add_to_cart">Add to cart</string>
    <string name="products">Products</string>
    <string name="reviews">Reviews</string>
    <string name="questions">Questions</string>
    <string name="specifications">Specifications</string>
    <string name="similar_goods">Similar goods</string>
    <string name="see_all">See all</string>
    <string name="empty_title">Your list is empty. Please add products</string>
    <string name="cancel">Cancel</string>
    <string name="submit">Submit</string>

</resources>